--- a/tools/traefik/.env
+++ b/tools/traefik/.env
@@ -21,7 +21,7 @@ CF_DNS_API_TOKEN=cloudflare_api_token
 # This domain MUST point to this server's public IP
 # Example: traefik.example.com
 # -------------------------------------------------
-TRAEFIK_DOMAIN=traefik.example.com
+TRAEFIK_DOMAIN=tools-traefik.example.com
 
 
 # -------------------------------------------------
