--- a/tools/traefik/.env
+++ b/tools/traefik/.env
@@ -42,3 +42,14 @@ TRAEFIK_DOMAIN=tools-traefik.example.com
 # -------------------------------------------------
 TRAEFIK_DASHBOARD_AUTH=admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/
 
+# -------------------------------------------------
+# BASIC AUTH (OPTIONAL MIDDLEWARE)
+# Format: username:hashed_password
+# -------------------------------------------------
+BASIC_AUTH_USERS=admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/
+
+# -------------------------------------------------
+# AUTHELIA
+# Used by forward-auth middleware redirect
+# -------------------------------------------------
+AUTHELIA_DOMAIN=auth.example.com
