Refactor Traefik configuration: update volume paths and modify dashboard middleware for Authelia protection

--- a/tools/traefik/.env
+++ b/tools/traefik/.env
@@ -25,31 +25,15 @@ TRAEFIK_DOMAIN=tools-traefik.example.com
 
 
 # -------------------------------------------------
-# TRAEFIK DASHBOARD BASIC AUTH
-# Format: username:hashed_password
-#
-# Generate with ONE of the following:
-#
-# 1) Apache htpasswd (recommended)
-#    htpasswd -nb admin strongpassword
-#
-# 2) Docker (no local tools required)
-#    docker run --rm httpd:2.4-alpine \
-#      htpasswd -nb admin strongpassword
-#
-# Result example:
-#   admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/
-# -------------------------------------------------
-TRAEFIK_DASHBOARD_AUTH=admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/
-
-# -------------------------------------------------
-# BASIC AUTH (OPTIONAL MIDDLEWARE)
-# Format: username:hashed_password
-# -------------------------------------------------
-BASIC_AUTH_USERS=admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/
-
-# -------------------------------------------------
 # AUTHELIA
 # Used by forward-auth middleware redirect
 # -------------------------------------------------
 AUTHELIA_DOMAIN=auth.example.com
+
+# -------------------------------------------------
+# BASIC AUTH (OPTIONAL)
+# Use in routers/middlewares when needed
+# One-shot (Docker):
+# docker run --rm httpd:2.4-alpine htpasswd -nb admin strongpassword
+# -------------------------------------------------
+BASIC_AUTH_USERS=admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/
