Fix BASIC_AUTH_USERS formatting by adding quotes for consistency

--- a/admin/traefik/.env
+++ b/admin/traefik/.env
@@ -36,4 +36,4 @@ AUTHELIA_DOMAIN=auth.example.com
 # One-shot (Docker):
 # docker run --rm httpd:2.4-alpine htpasswd -nb admin strongpassword
 # -------------------------------------------------
-BASIC_AUTH_USERS=admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/
+BASIC_AUTH_USERS='admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/'
