Add configuration files and update Docker setup for Ansible development
- Create .editorconfig for consistent coding styles
- Create .prettierrc for Prettier configuration
- Add requirements.txt for Python dependencies
- Update Dockerfile to use netcat-openbsd
- Modify devcontainer.json to set workspace folder
- Rename Docker container to ephemeral-dev-ansible

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -44,7 +44,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     wget \
     iputils-ping \
-    netcat \
+    netcat-openbsd \
     dnsutils \
     lsof \
     && apt-get clean \
