--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,7 @@
   // --------------------------------------------------
 
   "features": {
-    "ghcr.io/devcontainers/features/python:1": { "version": "3.11" }
+    "ghcr.io/devcontainers/features/python:1": {}
   },
 
   // --------------------------------------------------
@@ -58,8 +58,12 @@
         // Core tooling
         "esbenp.prettier-vscode",
         "ms-azuretools.vscode-docker",
+
+        // Python support
         "ms-python.python",
         "ms-python.vscode-pylance",
+
+        // YAML and Ansible support
         "redhat.vscode-yaml",
         "redhat.ansible",
 
@@ -72,5 +76,5 @@
   },
 
   // Optional hook executed once after container creation
-  "postCreateCommand": "python -m pip install --upgrade pip && pip install -r ansible/requirements.txt"
+  "postCreateCommand": "python -m venv ansible/.venv && ansible/.venv/bin/pip install -r ansible/requirements.txt"
 }
