--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 # Paths
-inventory = ./inventory
-roles_path = ./roles
-collection_paths = ./collections
+inventory = %(config_dir)s/inventory
+roles_path = %(config_dir)s/roles
+collection_paths = %(config_dir)s/collections
 # Behavior
 host_key_checking = False
 retry_files_enabled = False
